package(default_visibility = ["//visibility:public"])

# rules_nodejs runtime toolchains are constrained to @platforms//os:macos.
# Apple iOS targets resolve as @platforms//os:ios, so provide iOS-compatible
# runtime toolchains that reuse the host macOS node toolchains.
toolchain(
    name = "ios_arm64_runtime_toolchain",
    target_compatible_with = [
        "@platforms//os:ios",
        "@platforms//cpu:arm64",
    ],
    toolchain = "@nodejs_darwin_arm64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:runtime_toolchain_type",
)

toolchain(
    name = "ios_x86_64_runtime_toolchain",
    target_compatible_with = [
        "@platforms//os:ios",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@nodejs_darwin_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:runtime_toolchain_type",
)
